--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <div>
-            <canvas id="canvas" width="721" height="721"></canvas>
+            <canvas id="canvas"></canvas>
             <button id="startBtn">Start</button>
         </div>
         <script src="scripts.js" defer></script>
